name:                image
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bisthebis/image#readme
license:             BSD3
license-file:        LICENSE
author:              borismartin
maintainer:          boris.martin.be@gmail.com
copyright:           MIT License
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, hip >= 1.5
  default-language:    Haskell2010

executable image-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , image
  default-language:    Haskell2010

test-suite image-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , image
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bisthebis/image
